--- a/yasgui.html
+++ b/yasgui.html
@@ -1,11 +1,14 @@
 <head>
-  <link href="https://unpkg.com/@triply/yasgui/build/yasgui.min.css" rel="stylesheet" type="text/css" />
+  <!-- link href="https://unpkg.com/@triply/yasgui/build/yasgui.min.css" rel="stylesheet" type="text/css" / -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
   <script src="https://unpkg.com/@triply/yasgui/build/yasgui.min.js"></script>
 </head>
 <body>
   <div id="yasgui"></div>
   <script>
-    const yasgui = new Yasgui(document.getElementById("yasgui"));
+    const yasgui = new Yasgui(document.getElementById("yasgui"), {
+  requestConfig: { endpoint: "https://api.parliament.uk/sparql" },
+  copyEndpointOnNewTab: false,
+});
   </script>
 </body>
