--- a/yasgui.html
+++ b/yasgui.html
@@ -1,5 +1,5 @@
 <head>
-  <!-- link href="https://unpkg.com/@triply/yasgui/build/yasgui.min.css" rel="stylesheet" type="text/css" / -->
+  <link href="https://unpkg.com/@triply/yasgui/build/yasgui.min.css" rel="stylesheet" type="text/css" />
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
   <script src="https://unpkg.com/@triply/yasgui/build/yasgui.min.js"></script>
 </head>
