--- a/yasgui.html
+++ b/yasgui.html
@@ -2,6 +2,7 @@
   <link href="https://unpkg.com/@triply/yasgui/build/yasgui.min.css" rel="stylesheet" type="text/css" />
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
   <script src="https://unpkg.com/@triply/yasgui/build/yasgui.min.js"></script>
+  <meta name="viewport" content="width=device-width">
 </head>
 <body>
   <div id="yasgui"></div>
